tests/arch/mips/error/compiler/test_mips_error_compiler_010.s

#
# Creator (https://creatorsim.github.io/creator/)
#

 .data
 	.align 2
    spa:	.space	16 * 1024 * 1024 * 1024

.text
   main:
   li $t0, 10
